# nautilus_builder

./: .dockerignore  .env.demo.example  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  DEVELOPMENT.md  Dockerfile.api  READINESS.md  README.md  RELEASE.md  alembic.ini  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  findings.md  handguard.md  pyproject.toml  sse_demo_server.py  structure.md  vitest.config.ts
.github/workflows/: ci.yml  docker.yml  security.yml
.omx/ultragoal/: brief.md  goal-snapshot.json  goals.json  ledger.jsonl
apps/web/: AGENTS.md  capture_screenshots.mjs  middleware.test.ts  middleware.ts  next-env.d.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  safety-contract.test.tsx  tsconfig.json  vitest.config.mts  vitest.config.ts  vitest.setup.ts
doc/: AGENTS.md  README.md  nautilus_builder_directory_architecture.md  nautilus_builder_existing_strategy_registry.md  nautilus_builder_hardguards.md  nautilus_builder_implementation_plan.md  nautilus_builder_implementation_prompts.md  nautilus_builder_lifecycle_versioning.md  nautilus_builder_naming_architecture.md  nautilus_builder_repo_dependency_architecture.md  nautilus_builder_spec.md  nautilus_trader_upgrade_checklist.md  readiness_status.json  strategy_dev_guide.md
docs/: deployment_guide.md  operations.md  tradehud-nd-runtime-contract-tests.md  tradehud-redis-stream-adapter.md  tradehud-sse-gateway.md  tradehud-v0-hardening.md
docs/adr/: 0001-ai-structured-output-provider.md  0002-python-static-analysis-baseline.md  0003-database-migration-framework.md  0004-ui-virtualization-deferred.md
docs/architecture/: builder-db-boundary.md
docs/compatibility/: daedalus-nt-compatibility.md
docs/demo/: dev-database-demo-runbook.md  production-demo-runbook.md
docs/deployment/: production-runbook.md  staging-runbook.md
docs/deprecations/: deprecation-inventory.md
docs/examples/: demo_adapter_discovery.py  demo_strategy_backtest.py  demo_strategy_basic.py
docs/gap-closure/: BASELINE.md  BASELINE_REWORKED_REVIEW.md  CLOSURE_REPORT.md  FINAL_REWORKED_GAP_CLOSURE_REPORT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md
docs/readiness/: readiness-matrix.md
docs/screenshots/: evidence-screenshots-guide.md
docs/superpowers/: AGENTS.md
docs/verification/: 2026-05-22-mvp-verification-report.md  2026-05-23-frontend-operator-mvp-verification-report.md  local-verification-checklist.md  persistence-verification.md
infra/: docker-compose.yml
infra/ci/: github-actions-test.yml
infra/deployment/: e2e-deployment-instructions.md  production-readiness-evidence.md
infra/migrations/: 001_builder_workflow_storage.sql  002_builder_standalone_platform.sql  003_builder_execution_lane.sql  004_builder_execution_lane_venue_ui.sql
migrations/: env.py
migrations/versions/: 0001_baseline_current_schema.py
scripts/: AGENTS.md  apply_builder_migrations.py  authority_scan_allowlist.txt  check_docs_consistency.py  check_forbidden_authority.sh  check_release_version.py  check_repo_hygiene.sh  check_secrets.sh  e2e_webui.sh  run_backtest.py  run_dev.sh  run_tests.sh  seed_builder_demo_data.py  seed_demo_evidence.py  smoke_production.sh  tradehud_replay_nd_fixtures.py  tradehud_seed_redis.py  verify_all.sh  verify_builder.py
services/: backend_runtime.py
services/api/: AGENTS.md  __init__.py  _app_env.py  app.py  app_factory.py  dependencies.py  dev_server.py  errors.py  fastapi_app.py  fastapi_cli.py  middleware.py  router.py  settings.py  sse.py  startup_policy.py
services/workers/: execution_lane_worker.py  nautilus_backtest_worker.py
tests/: AGENTS.md  test_dockerfile_safety.py  test_typed_errors.py
tests/adapter_registry/: test_discovery.py  test_registry_lookup.py
tests/ai_builder/: test_ai_output_must_validate.py  test_http_transport.py  test_instructor_provider_contract.py  test_llm_transport_ssl_timeout.py  test_openai_compatible_provider.py  test_param_parser.py  test_persistent_audit_store.py  test_prompt_redaction.py  test_rate_limiter.py
tests/api/: openapi_snapshot.json  test_api_error_standard.py  test_app_health.py  test_artifact_readiness_and_llm_config.py  test_audit_events.py  test_backtest_job_execution_routes.py  test_backtest_job_routes.py  test_backtest_profiles.py  test_evidence_list_route.py  test_evidence_summary.py  test_execution_lane_credentials_routes.py  test_execution_lane_routes.py  test_execution_lane_tradingnode_routes.py  test_execution_lane_venue_features.py  test_fastapi_app.py  test_fastapi_lifespan.py  test_health_build_version.py  test_health_endpoints.py  test_list_results_pagination.py  test_llm_config_routes.py  test_market_catalog.py  test_openapi_snapshot.py  test_pipeline_run.py  test_production_safety.py  test_route_auth_scope.py  test_route_mounts.py  test_security_hardening.py  test_strategies.py  test_tradehud_route_auth.py  test_workflow_results.py
tests/artifact_store/: test_factory_env.py  test_local_json_artifact_store.py  test_protocol_parity.py  test_s3_artifact_store.py
tests/audit/: test_audit_models.py
tests/auth/: test_audit_attribution.py  test_audit_middleware.py  test_capabilities.py  test_rate_limit.py  (+7 more)
(+463 files in other folders)
