[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-builder"
version = "0.1.0"
description = "Builder-side strategy authoring and observational runtime contracts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "nautilus_trader==1.223.0",
    "pydantic>=2.9",
    "psycopg[binary]>=3.2",
    "redis>=5.1",
    "uvicorn>=0.30",
]

[project.scripts]
nautilus-builder-api = "services.api.dev_server:main"
nautilus-builder-execution-worker = "services.workers.execution_lane_worker:main"
nautilus-builder-backend-check = "services.backend_runtime:main"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["packages*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:allow_legacy_fixture_refs=True is deprecated:DeprecationWarning",
]
