[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-builder"
version = "0.5.0"
description = "Builder-side strategy authoring and observational runtime contracts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "nautilus_trader==1.228.0",
    "pydantic>=2.9",
    "psycopg[binary]>=3.2",
    "redis>=5.1",
    "uvicorn>=0.30",
]

[project.scripts]
nautilus-builder-api = "services.api.fastapi_cli:main"
nautilus-builder-execution-worker = "services.workers.execution_lane_worker:main"
nautilus-builder-backend-check = "services.backend_runtime:main"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["packages*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Pyflakes (F) + pycodestyle errors (E4/E7/E9 = import, statement, runtime errors).
# These are the bug-catching + import-hygiene rules currently passing clean on
# packages/ and services/. Whitespace/style warnings (W, E1/E2/E3/E5) are out of
# scope. Test code (tests/) is intentionally out of the ruff gate.
select = ["E4", "E7", "E9", "F"]
